--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amplify-tutorial",
+  "name": "site-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-icons": "5.3.0",
+    "react-icons/fa": "*",
+    "styled-components": "*",
+    "@expo/vector-icons": "^14.0.3",
+    "react-native-paper": "4.9.2"
+    
   },
   "scripts": {
     "start": "react-scripts start",
